--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap"
-    />
     <title>Vue Template</title>
+    <link id="theme-link" rel="stylesheet" href="/themes/lara-light-teal/theme.css" />
   </head>
   <body>
     <svg
